; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_mr.c_mlx4_SW2HW_MPT.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_mr.c_mlx4_SW2HW_MPT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_cmd_mailbox = type { i32 }

@MLX4_CMD_SW2HW_MPT = common dso_local global i32 0, align 4
@MLX4_CMD_TIME_CLASS_B = common dso_local global i32 0, align 4
@MLX4_CMD_WRAPPED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, %struct.mlx4_cmd_mailbox*, i32)* @mlx4_SW2HW_MPT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx4_SW2HW_MPT(%struct.mlx4_dev* %0, %struct.mlx4_cmd_mailbox* %1, i32 %2) #0 {
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca %struct.mlx4_cmd_mailbox*, align 8
  %6 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store %struct.mlx4_cmd_mailbox* %1, %struct.mlx4_cmd_mailbox** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %8 = load %struct.mlx4_cmd_mailbox*, %struct.mlx4_cmd_mailbox** %5, align 8
  %9 = getelementptr inbounds %struct.mlx4_cmd_mailbox, %struct.mlx4_cmd_mailbox* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @MLX4_CMD_SW2HW_MPT, align 4
  %13 = load i32, i32* @MLX4_CMD_TIME_CLASS_B, align 4
  %14 = load i32, i32* @MLX4_CMD_WRAPPED, align 4
  %15 = call i32 @mlx4_cmd(%struct.mlx4_dev* %7, i32 %10, i32 %11, i32 0, i32 %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @mlx4_cmd(%struct.mlx4_dev*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
